# rn-music

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
midi/: README.txt  fife-and-drum-1.mid  fife-and-drum-1.rg
ogg/: README.txt
rg/: bonny-morn.rg  fife-and-drum-1.rg
rg2midi/: README.txt  rg2midi.darwin-osx-10.14-clang-4.2.1  rg2midi.linux64-mint-19.1-gcc7.3
